force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed_Date__c</fullName>
    <label>DD Completed Date</label>
    <type>Date</type>
</CustomField>