force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Completion_Count__c.field-meta.xml
<CustomField>
    <fullName>DD_Completion_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DD Completion Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>