force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Created_Date__c</fullName>
    <label>DD Created Date</label>
    <type>DateTime</type>
</CustomField>