force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Duration_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>DD_Duration_Business_Hours__c</fullName>
    <label>DD Duration - Business Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>