force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>DD_Elapsed_Time__c</fullName>
    <formula>If(ISBLANK(DD_Completed_Date__c),TODAY() - DD_Start_Date__c,DD_Completed_Date__c-DD_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Elapsed Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>