force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Revision__c.field-meta.xml
<CustomField>
    <fullName>DD_Revision__c</fullName>
    <label>DD Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>