force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Start_Date__c</fullName>
    <label>DD Start Date</label>
    <type>Date</type>
</CustomField>