force-app/main/default/objects/Registration_Snapshot__c/fields/DD_Total_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>DD_Total_Business_Hours__c</fullName>
    <formula>BH_InProgress__c + BH_AwaitingApproval__c + BH_Referred__c + BH_ApprovalInProgress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Total Business Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>