force-app/main/default/objects/Registration_Snapshot__c/fields/Director_Count__c.field-meta.xml
<CustomField>
    <fullName>Director_Count__c</fullName>
    <label>Director Count</label>
    <summaryForeignKey>Snapshot_Director_Association__c.Registration_Snapshot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>