force-app/main/default/objects/Registration_Snapshot__c/fields/Director_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>Director_Validation_Error__c</fullName>
    <formula>(ISPICKVAL(Business_Type__c, &#39;Private Company&#39;) || ISPICKVAL(Business_Type__c, &#39;Public Company&#39;) 
|| ISPICKVAL(Business_Type__c, &#39;Trusts/Foundation&#39;) || ISPICKVAL(Business_Type__c, &#39;Regulated Firm&#39;) || ISPICKVAL(Business_Type__c, &#39;Government&#39;)) &amp;&amp; Director_Count__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director Validation Error</label>
    <type>Checkbox</type>
</CustomField>