force-app/main/default/objects/Registration_Snapshot__c/fields/Directors__c.field-meta.xml
<CustomField>
    <fullName>Directors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directors</label>
    <type>Checkbox</type>
</CustomField>