force-app/main/default/objects/Registration_Snapshot__c/fields/Doc_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Doc_Business_Address__c</fullName>
    <formula>IF(ISBLANK( Address_Line_1__c ), &quot;&quot;, Address_Line_1__c &amp; &quot; &quot;) &amp; 
IF(ISBLANK( Address_Line_2__c ), &quot;&quot;, Address_Line_2__c &amp; &quot; &quot;) &amp; 
IF(ISBLANK( City__c ), &quot;&quot;, City__c &amp; &quot; &quot;) &amp; 
IF(ISBLANK( Postcode__c ), &quot;&quot;, Postcode__c &amp; &quot; &quot;) &amp; 
IF(ISBLANK( State_Province__r.Name ), &quot;&quot;, State_Province__r.Name &amp; &quot; &quot;) &amp; 
IF(ISBLANK( TEXT( Country__c )), &quot;&quot;, TEXT( Country__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Business Address</label>
    <type>Text</type>
</CustomField>