force-app/main/default/objects/Registration_Snapshot__c/fields/Doc_CEO_CFO_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Doc_CEO_CFO_Date_of_Birth__c</fullName>
    <formula>TEXT(DAY(CEO_CFO_Date_of_Birth__c)) + TEXT(MONTH(CEO_CFO_Date_of_Birth__c)) + TEXT(YEAR(CEO_CFO_Date_of_Birth__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc CEO/CFO Date of Birth</label>
    <type>Text</type>
</CustomField>