force-app/main/default/objects/Registration_Snapshot__c/fields/Doc_ECN__c.field-meta.xml
<CustomField>
    <fullName>Doc_ECN__c</fullName>
    <formula>Account__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc ECN</label>
    <type>Text</type>
</CustomField>