force-app/main/default/objects/Registration_Snapshot__c/fields/Doc_Other_Locations__c.field-meta.xml
<CustomField>
    <fullName>Doc_Other_Locations__c</fullName>
    <formula>IF(ISNULL(Business_presence_in_high_risk_country__c), &#39;No&#39;, &#39;Yes&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Other Locations</label>
    <type>Text</type>
</CustomField>