force-app/main/default/objects/Registration_Snapshot__c/fields/Doc_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Doc_Percentage__c</fullName>
    <formula>IF( Text( RegBusiness_Country__c ) = &quot;Hong Kong&quot;, 10, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>