force-app/main/default/objects/Registration_Snapshot__c/fields/Edit_in_Form_View__c.field-meta.xml
<CustomField>
    <fullName>Edit_in_Form_View__c</fullName>
    <formula>HYPERLINK(&quot;/apex/RegistrationFormInternal?id=&quot;&amp; Id, &quot;Edit this Registration&quot;,&#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit in Form View</label>
    <type>Text</type>
</CustomField>