force-app/main/default/objects/Registration_Snapshot__c/fields/EFT_Bank_Account_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>EFT_Bank_Account_Validation_Error__c</fullName>
    <formula>AND(INCLUDES(Product__c, &#39;eNett&#39;), OR(Active_Billing_Account_Count__c = 0, Active_Payable_Account_Count__c = 0, Active_Receivable_Account_Count__c = 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EFT Bank Account Validation Error</label>
    <type>Checkbox</type>
</CustomField>