force-app/main/default/objects/Registration_Snapshot__c/fields/EFT_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>EFT_Subscription_Fee__c</fullName>
    <description>The monthly price the customer will pay for EFT</description>
    <label>EFT Subscription Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>