force-app/main/default/objects/Registration_Snapshot__c/fields/Email_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Thread_Id__c</fullName>
    <formula>&quot;[ref:&quot; &amp; Id &amp; &quot;]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Thread Id</label>
    <type>Text</type>
</CustomField>