force-app/main/default/objects/Registration_Snapshot__c/fields/eNett_EFT__c.field-meta.xml
<CustomField>
    <fullName>eNett_EFT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From Lead</description>
    <label>eNett EFT</label>
    <type>Checkbox</type>
</CustomField>