force-app/main/default/objects/Registration_Snapshot__c/fields/FATCA_Reportable__c.field-meta.xml
<CustomField>
    <fullName>FATCA_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FATCA Reportable</label>
    <type>Checkbox</type>
</CustomField>