force-app/main/default/objects/Registration_Snapshot__c/fields/Geo_City__c.field-meta.xml
<CustomField>
    <fullName>Geo_City__c</fullName>
    <label>Geo City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>