force-app/main/default/objects/Registration_Snapshot__c/fields/Geo_Country__c.field-meta.xml
<CustomField>
    <fullName>Geo_Country__c</fullName>
    <label>Geo Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>