force-app/main/default/objects/Registration_Snapshot__c/fields/Geo_Hostname__c.field-meta.xml
<CustomField>
    <fullName>Geo_Hostname__c</fullName>
    <label>Geo Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>