force-app/main/default/objects/Registration_Snapshot__c/fields/Geo_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Geo_Postcode__c</fullName>
    <label>Geo Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>