force-app/main/default/objects/Registration_Snapshot__c/fields/Geo_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Geo_Service_Provider__c</fullName>
    <label>Geo Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>