force-app/main/default/objects/Registration_Snapshot__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>From Lead</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>