force-app/main/default/objects/Registration_Snapshot__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Registration Snapshots</relationshipLabel>
    <relationshipName>Registration_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>