force-app/main/default/objects/Registration_Snapshot__c/fields/Listed_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Listed_Exchange__c</fullName>
    <label>Listed Exchange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>