force-app/main/default/objects/Registration_Snapshot__c/fields/Net_Duration_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Net_Duration_Business_Days__c</fullName>
    <label>Net Duration (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>