force-app/main/default/objects/Registration_Snapshot__c/fields/PCC_or_SID__c.field-meta.xml
<CustomField>
    <fullName>PCC_or_SID__c</fullName>
    <label>PCC or SID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>