force-app/main/default/objects/Registration_Snapshot__c/fields/Principal_Signatory_Validation_Error2__c.field-meta.xml
<CustomField>
    <fullName>Principal_Signatory_Validation_Error2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal Signatory Validation Error2</label>
    <type>Checkbox</type>
</CustomField>