force-app/main/default/objects/Registration_Snapshot__c/fields/Re_DD_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Reason__c</fullName>
    <label>Re DD Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>