force-app/main/default/objects/Registration_Snapshot__c/fields/Reg_Contains_EFT__c.field-meta.xml
<CustomField>
    <fullName>Reg_Contains_EFT__c</fullName>
    <formula>INCLUDES(Product__c , &#39;eNett&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Contains EFT</label>
    <type>Checkbox</type>
</CustomField>