force-app/main/default/objects/Registration_Snapshot__c/fields/RegBusiness_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RegBusiness_Address_Line_1__c</fullName>
    <label>Reg Bus Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>