force-app/main/default/objects/Registration_Snapshot__c/fields/RegBusiness_Country__c.field-meta.xml
<CustomField>
    <fullName>RegBusiness_Country__c</fullName>
    <label>Reg Bus Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>