force-app/main/default/objects/Registration_Snapshot__c/fields/RegBusiness_Postcode__c.field-meta.xml
<CustomField>
    <fullName>RegBusiness_Postcode__c</fullName>
    <label>Reg Bus Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>